Add authorization to update random thought
