# app/controllers/random_thoughts_controller.rb
@@ -2,7 +2,7 @@
 
 # Implements CRUD operations for RandomThought
 class RandomThoughtsController < ApplicationController
-  before_action :authorize_request, only: %i[create destroy]
+  before_action :authorize_request, only: %i[create update destroy]
   before_action :find_random_thought, only: %i[show update destroy]
 
   def index
