# swagger/v1/swagger.yaml
@@ -172,6 +172,8 @@ paths:
                 "$ref": "#/components/schemas/error"
     patch:
       summary: update random_thought
+      security:
+      - bearer: []
       parameters: []
       responses:
         '200':
@@ -195,6 +197,18 @@ paths:
                     status: 400
                     error: bad_request
                     message: Error occurred while parsing request parameters
+              schema:
+                "$ref": "#/components/schemas/error"
+        '401':
+          description: unauthorized
+          content:
+            application/json:
+              examples:
+                unauthorized:
+                  value:
+                    status: 401
+                    error: unauthorized
+                    message: Signature verification failed
               schema:
                 "$ref": "#/components/schemas/error"
         '404':
